--- a/my-app/public/css/layout.css
+++ b/my-app/public/css/layout.css
@@ -69,9 +69,17 @@ header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
    color: #fff;
    margin: 0 auto;
-   width: 70%;
+   width: 100%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
+
+header .background-box {
+   width: 100% !important;
+   height: auto;
+   padding: 20px 20px 20px 20px !important;
+   background-color: rgba(236, 159, 97, 0.753) !important;
+}
+
 header .banner-text h3 span,
 header .banner-text h3 a {
    color: #fff;
@@ -188,9 +196,9 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #about {
-   background: #2B2B2B;
-   padding-top: 96px;
-   padding-bottom: 66px;
+   background: rgb(236, 160, 97);
+   padding-top: 30px;
+   padding-bottom: 30px;
    overflow: hidden;
 }
 
@@ -204,14 +212,15 @@ ul#nav li.current a { color: #F06000; }
 }
 #about p {
    line-height: 30px;
-   color: #7A7A7A;
+   color: rgb(122, 122, 122);
 }
 #about .profile-pic {
    position: relative;
    width: 200px;
    height: 258px;
-   border-radius: 30% !important;
+   border-radius: 20% !important;
 }
+
 #about .contact-details { width: 41.66667%; }
 #about .download {
    width: 58.33333%;
