--- a/my-app/public/css/media-queries.css
+++ b/my-app/public/css/media-queries.css
@@ -19,6 +19,29 @@
       margin: 0 auto 12px auto;
    }
 
+   /* Testimonials Section
+   ----------------------------------------------------------------------- */
+   #testimonials .text-container { text-align: center; }
+   #testimonials h1 {
+      font: 16px/24px 'opensans-bold', sans-serif;
+      text-align: center;
+      margin-bottom: 30px;
+      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
+   }
+   #testimonials h1 span { display: block; }
+   #testimonials blockquote { padding-bottom: 24px; }
+   #testimonials blockquote p {
+      font-size: 20px;
+      line-height: 42px;      
+   }
+
+   /* Control Nav */
+   .flex-control-nav {
+      text-align: center;
+      margin-left: -30px;
+   }
+
+
 }
 
 /* screenwidth less than 900px
@@ -63,15 +86,27 @@
    #resume .main-col { padding-right: 5%; }   
 
    /* Testimonials Section
-   ------------------------------------------------------------------- */
-   #testimonials .header-col h1:before {
-      font-size: 66px;
-      line-height: 66px;
+   ----------------------------------------------------------------------- */
+   #testimonials .text-container { text-align: center; }
+   #testimonials h1 {
+      font: 16px/24px 'opensans-bold', sans-serif;
+      text-align: center;
+      margin-bottom: 30px;
+      text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
    }
+   #testimonials h1 span { display: block; }
+   #testimonials blockquote { padding-bottom: 24px; }
    #testimonials blockquote p {
-      font-size: 22px;
-      line-height: 46px;      
+      font-size: 20px;
+      line-height: 42px;      
    }
+
+   /* Control Nav */
+   .flex-control-nav {
+      text-align: center;
+      margin-left: -30px;
+   }
+
 
     /* Call to Action Section
    ------------------------------------------------------------------- */
@@ -272,7 +307,6 @@
       text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
    }
    #testimonials h1 span { display: block; }
-   #testimonials .header-col h1:before { content: none; }
    #testimonials blockquote { padding-bottom: 24px; }
    #testimonials blockquote p {
       font-size: 20px;
