--- a/css/layout.css
+++ b/css/layout.css
@@ -207,7 +207,7 @@ ul#nav li.current a { color: #F06000; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   color: rgb(163, 241, 205);
+   color: rgb(240, 152, 94);
    margin-bottom: 12px;
 }
 #about p {
@@ -249,7 +249,7 @@ ul#nav li.current a { color: #F06000; }
 #resume {
    background: #fff;
    padding-top: 90px;
-   padding-bottom: 72px;
+   padding-bottom: 10px;
    overflow: hidden;
 }
 
@@ -310,7 +310,7 @@ ul#nav li.current a { color: #F06000; }
    position: relative;
   	margin-bottom: 60px;
   	background: #ccc;
-  	height: 42px;
+  	height: 25px;
   	border-radius: 3px;
 }
 .bars li em {
@@ -331,7 +331,7 @@ ul#nav li.current a { color: #F06000; }
    padding-right: 24px;
   	background: rgba(36, 63, 51);
    display: inline-block;
-  	height: 42px;
+  	height: 25px;
    line-height: 42px;
    border-radius: 3px 0 0 3px;
 }
@@ -428,9 +428,9 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #portfolio {
-   background: rgba(36, 63, 51);
-   padding-top: 90px;
+   padding-top: 30px;
    padding-bottom: 60px;
+   width: 100%;
 }
 #portfolio h1 {
    font: 15px/24px 'opensans-semibold', sans-serif;
@@ -442,7 +442,9 @@ ul#nav li.current a { color: #F06000; }
 }
 
 /* Portfolio Content */
-#portfolio-wrapper .columns { margin-bottom: 36px; }
+#portfolio-wrapper .columns { 
+   width: 100%;
+   margin-bottom: 36px; }
 .portfolio-item .item-wrap {
    background: rgba(36, 63, 51);
    overflow: hidden;
@@ -458,6 +460,8 @@ ul#nav li.current a { color: #F06000; }
    display: block;
    cursor: pointer;
 }
+
+
 
 /* overlay */
 .portfolio-item .item-wrap .overlay {
@@ -689,9 +693,13 @@ call-to-action .button {
    color: #fff;
 }
 
+
 /* Testimonials Section
    ----------------------------------------------------------------------- */
-   #testimonials .text-container { text-align: center; }
+   #testimonials .text-container { 
+      text-align: center; 
+      width: 100%;
+   }
    #testimonials h1 {
       font: 16px/24px 'opensans-bold', sans-serif;
       text-align: center;
@@ -699,7 +707,7 @@ call-to-action .button {
       text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
    }
    #testimonials h1 span { display: block; }
-   #testimonials blockquote { padding-bottom: 24px; }
+   #testimonials blockquote { padding-bottom: 0px; }
    #testimonials blockquote p {
       font-size: 20px;
       line-height: 42px;      
@@ -713,6 +721,49 @@ call-to-action .button {
    #testimonials p {
       color: #fff;
    }
+   
+   #testimonials .text-style {
+      color: #fff;
+   }
+
+   #testimonials .grid-container {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+
+    #testimonials .grid-container-one {
+      display: grid;
+      grid-template-columns: 250px auto 250px;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+
+    #testimonials .grid-container-first {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+    
+    #testimonials .grid-container > div {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
+    #testimonials .grid-container-one > div {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
+    #testimonials .grid-container-first > div {
+      text-align: center;
+      padding: 5px 0;
+    }
 
    /* Control Nav */
    .flex-control-nav {
@@ -730,7 +781,7 @@ call-to-action .button {
 
 /*	Blockquotes */
 #testimonials blockquote {
-   margin: 0 0px 30px 0px;
+   margin: 0 0px 0px 0px;
    padding-left: 0;
    position: relative;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
@@ -738,7 +789,6 @@ call-to-action .button {
 #testimonials blockquote:before { content: none; }
 #testimonials blockquote p {
    font-family: 'librebaskerville-italic', serif;
-   padding: 0;
    font-size: 24px;
    line-height: 48px;
    color: #fff
@@ -845,9 +895,12 @@ call-to-action .button {
 
 #contact {
    background: rgba(36, 63, 51);
-   padding-top: 96px;
-   padding-bottom: 102px;
+   padding-top: 10%;
+   padding-bottom: 10%;
+   padding-left: 10%;
+   padding-right: 8%;
    color: #fff;
+   display: block;
 }
 #contact .section-head { margin-bottom: 42px; }
 
@@ -866,10 +919,10 @@ call-to-action .button {
    font-family: 'FontAwesome';
    content: "\f0e0";
 	padding-right: 10px;
-	font-size: 72px;
-   line-height: 72px;
+	font-size: 40px;
+   line-height: 40px;
    text-align: left;
-   float: left;
+   
    color: #ebeeee;
 }
 
@@ -886,13 +939,16 @@ call-to-action .button {
 
 
 /* contact form */
-#contact form { margin-bottom: 30px; }
+#contact form {
+   width: 100% !important;
+   height: auto;
+}
+
 #contact label {
    font: 15px/24px 'opensans-bold', sans-serif;
    margin: 12px 0;
    color: #EBEEEE;
 	display: inline-block;
-	float: left;
    width: 26%;
 }
 #contact input,
@@ -901,12 +957,12 @@ call-to-action .button {
    padding: 18px 20px;
 	color: #eee;
 	background: rgb(71, 124, 100);
-	margin-bottom: 42px;
+	margin-bottom: 30px;
 	border: 0;
 	outline: none;
    font-size: 15px;
    line-height: 24px;
-   width: 65%;
+   width: 95%;
 }
 #contact input:focus,
 #contact textarea:focus,
@@ -954,6 +1010,20 @@ call-to-action .button {
    position: relative;
    left: 18px;
    top: 17px;
+}
+
+#contact .button {
+   margin-top: 6px;
+   background: #fff;
+   color: rgba(36, 63, 51);
+}
+#contact .button:hover {
+   background: rgba(36, 63, 51);
+   color: #fff;
+}
+#contact .button i {
+   margin-right: 15px;
+   font-size: 20px;
 }
 
 /* ------------------------------------------------------------------ */
