--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -35,11 +35,26 @@
       line-height: 42px;      
    }
 
+   #testimonials .grid-container {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+    
+    #testimonials .grid-container > div {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
    /* Control Nav */
    .flex-control-nav {
       text-align: center;
       margin-left: -30px;
    }
+
+  
 
 
 }
@@ -100,6 +115,19 @@
       font-size: 20px;
       line-height: 42px;      
    }
+
+   #testimonials .grid-container {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+    
+    #testimonials .grid-container > div {
+      text-align: center;
+      padding-bottom: 20px;
+    }
 
    /* Control Nav */
    .flex-control-nav {
@@ -307,11 +335,37 @@
       text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
    }
    #testimonials h1 span { display: block; }
-   #testimonials blockquote { padding-bottom: 24px; }
+   #testimonials blockquote { padding-bottom: 0px; }
    #testimonials blockquote p {
       font-size: 20px;
       line-height: 42px;      
    }
+
+   #testimonials .grid-container {
+      display: grid;
+      grid-template-columns: auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+    
+    #testimonials .grid-container > div {
+      text-align: center;
+      padding-bottom: 10px;
+    }
+
+    #testimonials .grid-container-one {
+      display: grid;
+      grid-template-columns: auto;
+      grid-gap: 5px;
+      align-content: center;
+      padding: 5px;
+    }
+    
+    #testimonials .grid-container-one > div {
+      text-align: center;
+      padding-bottom: 10px;
+    }
 
    /* Control Nav */
    .flex-control-nav {
@@ -351,6 +405,8 @@
       width: 100%;
       margin-left: 0;
    }
+
+   
 
 
    /* footer
